--- a/style.css
+++ b/style.css
@@ -1,24 +1,33 @@
+html,
 body {
-  background-image: url(./background.jpg);
-  background-color: #fbfff7; 
- }
-header {
+  background-image: url(./images/background.jpg);
+  background-color: #fbfff7;
+  height: 100%;
+  }
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  }
+.main {
+  flex: 1 1 auto;
+  padding: 30px;
+  }
+.header {
     display: flex;
     flex-flow: row nowrap;
     justify-content: flex-start;
     align-items: center;
-    /* border-bottom-style: ridge;
-    border-color: #489e16;
-    border-right: ridge #489e16;        line */
+    min-height: 100%;
 }
-.logo {
+  .logo {
     margin-right: 30px;
     margin-left: 15px;
 }
-.menu {
+  .menu {
     flex-grow: 1;
 }
-.menu ul {
+  .menu ul {
     display: flex;
     flex-flow: row nowrap;
     margin: 0 0 0;
@@ -27,14 +36,12 @@ header {
     line-height: 20px;
     list-style: none;
     float: right;
-/*    justify-content: space-between;
-    align-items: center; */
 }
-.menu li {
+  .menu li {
 margin-right: 20px;
 }
-.menu a,
-.menu .active {
+  .menu a,
+  .menu .active {
     display: block;
     padding: 8px 10px;
     text-transform: uppercase;
@@ -50,7 +57,7 @@ margin-right: 20px;
     cursor: pointer;
     border-radius: 8px;
 }
-.menu a:hover{
+  .menu a:hover{
     color: #ffffff;
     background-color: #74b81c;
     border-radius: 8px;
@@ -58,16 +65,16 @@ margin-right: 20px;
     padding: 8px 10px;
 }
 
-* {box-sizing: border-box;
+  * {box-sizing: border-box;
   position: relative;}
 
-.search form {
+  .search form {
   box-sizing: border-box;
   position: relative;
   width: 300px;
   margin: 30px;
 }
-.search input {
+  .search input {
   width: 100%;
   height: 38px;
   padding-left: 10px;
@@ -77,7 +84,7 @@ margin-right: 20px;
   background: #f1f5e0;
   color: #9E9C9C;
 }
-.search button {
+  .search button {
   position: absolute; 
   top: 0;
   right: 0;
@@ -88,22 +95,20 @@ margin-right: 20px;
   border-radius: 5px 5px 5px 5px;
   cursor: pointer;
 }
-.search button:before {
+  .search button:before {
   content: "\f002";
   font-family: FontAwesome;
   font-size: 16px;
   color: #ffffff;
 } 
-/* .main-footer .footer-inner {
-  padding-top: 45px;
-  padding-bottom: 45px;
-  border-top: 3px solid #333;
-  border-color: #489e16;
-} */
-.main-footer .connection ul {
+.footer .connection ul {
   display: flex;
   flex-flow: row nowrap;
   padding: 20px;
   list-style: none;
-  float: center;
+  margin: 10 20 0;
+  padding: 20px;
+}
+  .connection li {
+    margin-right: 10px;
 }
